<resources>
    <string name="app_name">Waves Of Food</string>
    <string name="slogan_splash">Deliver Favorite Food</string>
    <string name="slogan_start">Enjoy Restaurant Quality Meals\n at Home</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_home">Explore Your Favorite Food</string>
    <!--    concise-->
    <string name="concise_next">Next</string>
    <string name="concise_name">Name</string>
    <string name="concise_email">Email</string>
    <string name="concise_email_phone">Email or Phone number</string>
    <string name="concise_password">Password</string>
    <string name="concise_google">Google</string>
    <string name="concise_facebook">Facebook</string>
    <string name="concise_login">Login</string>
    <string name="concise_sign_up">Sign Up</string>
    <string name="concise_create_account">Create Account</string>
    <string name="concise_welcome">"Welcome !"</string>
    <string name="concise_home">Home</string>
    <string name="concise_cart">Cart</string>
    <string name="concise_search">Search</string>
    <string name="concise_history">History</string>
    <string name="concise_profile">Profile</string>
    <string name="concise_popular">Popular</string>
    <string name="concise_view_menu">View Menu</string>
    <string name="concise_menu">Menu</string>
    <string name="concise_recent_buy">Recent buy</string>
    <string name="concise_buy_again">Buy again</string>
    <string name="concise_address">Address</string>
    <string name="concise_phone">Phone</string>
    <string name="concise_notification">Notification</string>
    <string name="concise_edit">Edit</string>
    <string name="concise_payment_method">Payment Method</string>
    <string name="concise_total_amount">Total Amount</string>
    <!--    prompt-->
    <string name="prompt_login">Login to your account</string>
    <string name="prompt_sign_up">Sign up here</string>
    <string name="prompt_sign_in">Sign in or register</string>
    <string name="prompt_login_with">Or\n<b>Continue with</b></string>
    <string name="prompt_sign_up_with">Or\n<b>Sign up with</b></string>
    <string name="prompt_not_account"><u>Don\'t have account?</u></string>
    <string name="prompt_have_account"><u>Already have account?</u></string>
    <string name="prompt_add_location">Choose Your Location</string>
    <string name="prompt_add_to_cart">Add to Cart</string>
    <string name="prompt_search">What do you want to order?</string>
    <string name="prompt_re_buy">Buy again</string>
    <string name="prompt_save_info">Save Information</string>
    <string name="prompt_place_order">Place my order</string>
    <string name="prompt_order_success">Congrats\nYour Order Placed</string>
    <string name="prompt_go_home">Go home</string>
    <!--    action-->
    <string name="action_proceed">Proceed</string>

    <!--    invalid-->
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_login_failed">"Login failed"</string>

    <!--other-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">407236622916-09rkefthrdrvda5p9igbvcsljs62avgh.apps.googleusercontent.com</string>
    <string name="lorem_ipsum_short">Lorem ipsum</string>
    <string name="lorem_ipsum_email">loremipsum@email.com</string>
    <string name="lorem_ipsum_long">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</string>
    <string name="lorem_ipsum_phone">0123456789</string>
    <string name="prompt_choose_location">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.\"</string>
    <string name="concise_description">Short Description</string>
    <string name="concise_ingredients">Ingredients</string>
    <string name="invalid_empty">Empty</string>
    <string name="prompt_edit"><u>Edit your profile</u></string>
    <string name="concise_pay">Pay</string>
    <string name="concise_location">Location:</string>
    <string name="concise_time">Time:</string>


</resources>