<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="@dimen/title_spacing"
                android:layout_height="wrap_content"
                android:text="@string/concise_name"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name" />


            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="100"
                android:text="@string/lorem_ipsum_short"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Hint" />

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/background_edit_text"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="@dimen/title_spacing"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"
                android:text="@string/concise_address" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="100"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Caption"
                android:text="@string/lorem_ipsum_long" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:background="@drawable/background_edit_text"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="@dimen/title_spacing"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"
                android:text="@string/concise_email" />

            <EditText
                android:id="@+id/gmailEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="100"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Caption"
                android:text="@string/lorem_ipsum_email" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/background_edit_text"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="@dimen/title_spacing"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"
                android:text="@string/concise_phone" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="12"
                android:inputType="phone"
                android:text="@string/lorem_ipsum_phone"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Caption" />
        </LinearLayout>


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        style="@style/CustomStyle.WavesOfFood.ElevationButton"
        android:layout_gravity="bottom"
        android:text="@string/prompt_save_info" />
</FrameLayout>