<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PaymentActivity">

    <LinearLayout
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background"
                app:srcCompat="@drawable/back_arrow_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Title"
                android:text="@string/concise_edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"

            android:background="@drawable/background_edit_text"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="@dimen/short_title_spacing"
                android:layout_height="wrap_content"
                android:text="@string/concise_name"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name" />


            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="100"
                android:hint="@string/lorem_ipsum_short"
                android:inputType="textPersonName"
                android:textColor="@color/text_hint" />

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/background_edit_text"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="start"
                android:id="@+id/textView12"
                android:layout_width="@dimen/short_title_spacing"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"
                android:text="@string/concise_address" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="100"
                android:inputType="textMultiLine"
                android:textColor="@color/text_hint"
                android:hint="@string/invalid_empty" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/background_edit_text"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="@dimen/short_title_spacing"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"
                android:text="@string/concise_phone" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="12"
                android:inputType="phone"
                android:hint="@string/invalid_empty"
                android:textColor="@color/text_hint" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/background_edit_text"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="@dimen/long_title_spacing"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"

                android:text="@string/concise_payment_method" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/cash_on_delivery_photo" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/background_edit_text"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="@dimen/long_title_spacing"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"
                android:text="@string/concise_total_amount" />

            <TextView
                android:id="@+id/totalPriceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="price"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Price" />
        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/placeOrderBtn"
        android:layout_margin="@dimen/space_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/CustomStyle.WavesOfFood.ElevationButton"
        android:text="@string/prompt_place_order" />
</FrameLayout>


