<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_xs"
            android:background="@drawable/background_elevation"
            android:elevation="@dimen/elevation_s"
            android:padding="@dimen/space_s">

            <ImageView
                android:id="@+id/foodImage"
                android:layout_width="@dimen/image_s"
                android:layout_height="@dimen/image_s"
                android:layout_marginVertical="@dimen/space_xxs"
                android:layout_marginStart="@dimen/space_xxs"
                android:src="@drawable/menu_photo_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/orderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_s"
                android:layout_marginTop="@dimen/space_xxs"
                android:text="Text View"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"
                app:layout_constraintBottom_toBottomOf="@+id/foodImage"
                app:layout_constraintStart_toEndOf="@+id/foodImage"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="5$"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Title"
                app:layout_constraintBottom_toTopOf="@+id/payBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/payBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"

                android:text="@string/concise_time"
                app:layout_constraintBottom_toTopOf="@+id/textView18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodImage" />

            <TextView
                android:id="@+id/timeOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_s"
                android:text="@string/invalid_empty"
                app:layout_constraintBottom_toTopOf="@+id/textView18"
                app:layout_constraintStart_toEndOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concise_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:maxLines="1"
                android:id="@+id/locationOrder"
                android:layout_width="@dimen/long_title_spacing"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_s"
                android:text="@string/invalid_empty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView18" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/payBtn"
                style="@style/CustomStyle.WavesOfFood.PrimaryButton.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concise_pay"
                app:layout_constraintTop_toBottomOf="@+id/totalPrice"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>